Attempt to fix the header sizing on small screens

--- a/themes/salix/assets/css/main.css
+++ b/themes/salix/assets/css/main.css
@@ -26,7 +26,8 @@ body {
 	height: 2rem;
 }
 
-header, section {
+section {
+	min-height: 100vh;
 	max-width: 100vw;
 	width: 100%;
 	margin: 0;
@@ -34,7 +35,6 @@ header, section {
 }
 
 header {
-	min-height: 100vh;
 	align-items: center;
 	background-color: white;
 	background-image: url("/img/willowtexture.png");
@@ -43,13 +43,23 @@ header {
 	background-size: 1024px;
 	color: var(--color-blue);
 	display: flex;
+	height: 100%;
 	justify-content: space-between;
 	margin: 0 auto;
+	max-height: 100vh;
 	max-width: 1650px;
+	padding: 5rem;
+	width: 100%;
+}
+
+@media (max-height: 1024px) {
+	header {
+		background-size: contain;
+	}
 }
 
 header h1 {
-	font-size: 15rem;
+	font-size: calc(100vh / 5);
 	opacity: 0.75;
 }
 
@@ -148,7 +158,6 @@ section.minimal-section a {
 	}
 
 	header {
-		background-size: contain;
 		flex-direction: column;
 		font-size: 1rem;
 	}
